// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SongTrackRenderer > レンダリングイベントが正しく発行される 1`] = `
{
  "renderingEventInfos": [
    {
      "phraseInfos": Map {
        "d20a046f707fe40f61b348e537bb9d648db896a9352ceedc07e7675942cf2117" => {
          "notes": [
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000002",
              "lyric": "て",
              "noteNumber": 60,
              "position": 1920,
            },
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000003",
              "lyric": "す",
              "noteNumber": 62,
              "position": 2400,
            },
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000004",
              "lyric": "と",
              "noteNumber": 64,
              "position": 2880,
            },
          ],
          "queryHash": undefined,
          "queryKey": undefined,
          "singingPitchHash": undefined,
          "singingPitchKey": undefined,
          "singingVoiceHash": undefined,
          "singingVoiceKey": undefined,
          "singingVolumeHash": undefined,
          "singingVolumeKey": undefined,
          "startTime": 1.5,
          "trackId": "00000000-0000-4000-0000-000000000001",
        },
        "c6b680b930c4a171f499d0a1b16818434b3cf38d8787d0ac1c5dea45d9008062" => {
          "notes": [
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000005",
              "lyric": "い",
              "noteNumber": 60,
              "position": 3840,
            },
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000006",
              "lyric": "ち",
              "noteNumber": 60,
              "position": 4320,
            },
          ],
          "queryHash": undefined,
          "queryKey": undefined,
          "singingPitchHash": undefined,
          "singingPitchKey": undefined,
          "singingVoiceHash": undefined,
          "singingVoiceKey": undefined,
          "singingVolumeHash": undefined,
          "singingVolumeKey": undefined,
          "startTime": 3.5,
          "trackId": "00000000-0000-4000-0000-000000000001",
        },
        "9f56ff7190aacf6eb22c686d458de68a24f45c0c944a0dbd801a9b601473f27f" => {
          "notes": [
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000007",
              "lyric": "に",
              "noteNumber": 62,
              "position": 5280,
            },
          ],
          "queryHash": undefined,
          "queryKey": undefined,
          "singingPitchHash": undefined,
          "singingPitchKey": undefined,
          "singingVoiceHash": undefined,
          "singingVoiceKey": undefined,
          "singingVolumeHash": undefined,
          "singingVolumeKey": undefined,
          "startTime": 5,
          "trackId": "00000000-0000-4000-0000-000000000001",
        },
      },
      "type": "phrasesGenerated",
    },
    {
      "phraseInfos": Map {
        "d20a046f707fe40f61b348e537bb9d648db896a9352ceedc07e7675942cf2117" => {
          "notes": [
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000002",
              "lyric": "て",
              "noteNumber": 60,
              "position": 1920,
            },
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000003",
              "lyric": "す",
              "noteNumber": 62,
              "position": 2400,
            },
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000004",
              "lyric": "と",
              "noteNumber": 64,
              "position": 2880,
            },
          ],
          "queryHash": undefined,
          "queryKey": undefined,
          "singingPitchHash": undefined,
          "singingPitchKey": undefined,
          "singingVoiceHash": undefined,
          "singingVoiceKey": undefined,
          "singingVolumeHash": undefined,
          "singingVolumeKey": undefined,
          "startTime": 1.5,
          "trackId": "00000000-0000-4000-0000-000000000001",
        },
        "c6b680b930c4a171f499d0a1b16818434b3cf38d8787d0ac1c5dea45d9008062" => {
          "notes": [
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000005",
              "lyric": "い",
              "noteNumber": 60,
              "position": 3840,
            },
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000006",
              "lyric": "ち",
              "noteNumber": 60,
              "position": 4320,
            },
          ],
          "queryHash": undefined,
          "queryKey": undefined,
          "singingPitchHash": undefined,
          "singingPitchKey": undefined,
          "singingVoiceHash": undefined,
          "singingVoiceKey": undefined,
          "singingVolumeHash": undefined,
          "singingVolumeKey": undefined,
          "startTime": 3.5,
          "trackId": "00000000-0000-4000-0000-000000000001",
        },
        "9f56ff7190aacf6eb22c686d458de68a24f45c0c944a0dbd801a9b601473f27f" => {
          "notes": [
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000007",
              "lyric": "に",
              "noteNumber": 62,
              "position": 5280,
            },
          ],
          "queryHash": undefined,
          "queryKey": undefined,
          "singingPitchHash": undefined,
          "singingPitchKey": undefined,
          "singingVoiceHash": undefined,
          "singingVoiceKey": undefined,
          "singingVolumeHash": undefined,
          "singingVolumeKey": undefined,
          "startTime": 5,
          "trackId": "00000000-0000-4000-0000-000000000001",
        },
      },
      "type": "cacheLoaded",
    },
    {
      "phraseKey": "d20a046f707fe40f61b348e537bb9d648db896a9352ceedc07e7675942cf2117",
      "type": "phraseRenderingStarted",
    },
    {
      "phraseKey": "d20a046f707fe40f61b348e537bb9d648db896a9352ceedc07e7675942cf2117",
      "queryHash": "e430a7955d2973d81293fab91147d38189a62a68567dbc5671fc6274e37966fe",
      "queryKey": "6f960df92a7a6543ca7f7c4502362a9991de05f6e94d48787c6222f7de7dab0a",
      "type": "queryGenerationComplete",
    },
    {
      "error": [TypeError: mock.singFrameF0 is not a function],
      "phraseKey": "d20a046f707fe40f61b348e537bb9d648db896a9352ceedc07e7675942cf2117",
      "type": "phraseRenderingError",
    },
    {
      "phraseKey": "c6b680b930c4a171f499d0a1b16818434b3cf38d8787d0ac1c5dea45d9008062",
      "type": "phraseRenderingStarted",
    },
    {
      "phraseKey": "c6b680b930c4a171f499d0a1b16818434b3cf38d8787d0ac1c5dea45d9008062",
      "queryHash": "a3143bc7cbda416982ffecf62cb62bae88aa09271743ae08bca44b958fa52e91",
      "queryKey": "061695d6f6961b2cb7b33f27274032ea4cf68b140d5d1a7f40df64bc42538fa2",
      "type": "queryGenerationComplete",
    },
    {
      "error": [TypeError: mock.singFrameF0 is not a function],
      "phraseKey": "c6b680b930c4a171f499d0a1b16818434b3cf38d8787d0ac1c5dea45d9008062",
      "type": "phraseRenderingError",
    },
    {
      "phraseKey": "9f56ff7190aacf6eb22c686d458de68a24f45c0c944a0dbd801a9b601473f27f",
      "type": "phraseRenderingStarted",
    },
    {
      "phraseKey": "9f56ff7190aacf6eb22c686d458de68a24f45c0c944a0dbd801a9b601473f27f",
      "queryHash": "1b095b86bbce8e635699a0d1c36e4d7ae842ecdbffdffac24f1451a228ca6deb",
      "queryKey": "246c7fc83d8a3ecd0d02014a248ffc9a5284ae130dc69e1f497caf557ee87f17",
      "type": "queryGenerationComplete",
    },
    {
      "error": [TypeError: mock.singFrameF0 is not a function],
      "phraseKey": "9f56ff7190aacf6eb22c686d458de68a24f45c0c944a0dbd801a9b601473f27f",
      "type": "phraseRenderingError",
    },
  ],
}
`;

exports[`SongTrackRenderer > 正しいレンダリング結果が返される 1`] = `
{
  "renderingResultInfo": {
    "phraseInfos": Map {
      "d20a046f707fe40f61b348e537bb9d648db896a9352ceedc07e7675942cf2117" => {
        "notes": [
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000002",
            "lyric": "て",
            "noteNumber": 60,
            "position": 1920,
          },
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000003",
            "lyric": "す",
            "noteNumber": 62,
            "position": 2400,
          },
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000004",
            "lyric": "と",
            "noteNumber": 64,
            "position": 2880,
          },
        ],
        "queryHash": "e430a7955d2973d81293fab91147d38189a62a68567dbc5671fc6274e37966fe",
        "queryKey": "6f960df92a7a6543ca7f7c4502362a9991de05f6e94d48787c6222f7de7dab0a",
        "singingPitchHash": undefined,
        "singingPitchKey": undefined,
        "singingVoiceHash": undefined,
        "singingVoiceKey": undefined,
        "singingVolumeHash": undefined,
        "singingVolumeKey": undefined,
        "startTime": 1.5,
        "trackId": "00000000-0000-4000-0000-000000000001",
      },
      "c6b680b930c4a171f499d0a1b16818434b3cf38d8787d0ac1c5dea45d9008062" => {
        "notes": [
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000005",
            "lyric": "い",
            "noteNumber": 60,
            "position": 3840,
          },
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000006",
            "lyric": "ち",
            "noteNumber": 60,
            "position": 4320,
          },
        ],
        "queryHash": "a3143bc7cbda416982ffecf62cb62bae88aa09271743ae08bca44b958fa52e91",
        "queryKey": "061695d6f6961b2cb7b33f27274032ea4cf68b140d5d1a7f40df64bc42538fa2",
        "singingPitchHash": undefined,
        "singingPitchKey": undefined,
        "singingVoiceHash": undefined,
        "singingVoiceKey": undefined,
        "singingVolumeHash": undefined,
        "singingVolumeKey": undefined,
        "startTime": 3.5,
        "trackId": "00000000-0000-4000-0000-000000000001",
      },
      "9f56ff7190aacf6eb22c686d458de68a24f45c0c944a0dbd801a9b601473f27f" => {
        "notes": [
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000007",
            "lyric": "に",
            "noteNumber": 62,
            "position": 5280,
          },
        ],
        "queryHash": "1b095b86bbce8e635699a0d1c36e4d7ae842ecdbffdffac24f1451a228ca6deb",
        "queryKey": "246c7fc83d8a3ecd0d02014a248ffc9a5284ae130dc69e1f497caf557ee87f17",
        "singingPitchHash": undefined,
        "singingPitchKey": undefined,
        "singingVoiceHash": undefined,
        "singingVoiceKey": undefined,
        "singingVolumeHash": undefined,
        "singingVolumeKey": undefined,
        "startTime": 5,
        "trackId": "00000000-0000-4000-0000-000000000001",
      },
    },
    "type": "complete",
  },
}
`;
